@@ -84,8 +84,11 @@ class DeferredTestCase(unittest.TestCase):
         result = []
         def cb(resultList, result=result):
             result.extend(resultList)
+        def catch(err):
+            return None
         dl.addCallbacks(cb, cb)
         defr1.callback("1")
+        defr2.addErrback(catch)
         defr2.errback(GenericError("2"))
         defr3.callback("3")
         self.failUnlessEqual([result[0],
@@ -103,8 +106,11 @@ class DeferredTestCase(unittest.TestCase):
         defr3 = defer.Deferred()
         dl = defer.DeferredList([defr1, defr2, defr3], fireOnOneErrback=1)
         result = []
+        def catch(err):
+            return None
         dl.addErrback(result.append)
         defr1.callback("1")
+        defr2.addErrback(catch)
         defr2.errback(GenericError("2"))
         self.failUnlessEqual([str(result[0].value[0].value), str(result[0].value[1])],
 
